--- a/sujet/tpROS.tex
+++ b/sujet/tpROS.tex
@@ -125,7 +125,7 @@ Le but de son développement est de pouvoir mettre à disposition de chacun des 
 
 De façon assez logique, les logiciels utilisant ROS se présentent sous une forme élémentaire, le package. Sur un ordinateur donné, tous les packages de l'utilisateur sont situés dans le même dossier.
 
-Pour ce TP nous utilisons la derniere version de ROS : \emph{Hydro}. La nouvelle version, \emph{Indigo}, sera directement compatible avec le TP.
+Pour ce TP nous utilisons la dernière version de ROS : \emph{Hydro}. La nouvelle version, \emph{Indigo}, sera directement compatible avec le TP.
 
 \subsection{Préparation de l'environnement de travail}
 
